--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title       : Skate or Bike
-description : half wheeling
+description : warming up...
 url         : https://skateorbike.com/
 
 # Build settings
