--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title       : Skate or Bike
-description : Sometimes we ride 4 sometimes we ride 2
+description : Sometimes we ride 4, sometimes we ride 2.
 url         : https://skateorbike.com/
 
 # Build settings
