--- a/_config.yml
+++ b/_config.yml
@@ -1,16 +1,20 @@
 # Site settings
 title       : Skate or Bike
-description : warming up...
+description : Sometimes we ride 4, sometimes we ride 2.
 url         : https://skateorbike.com/
+twitter_username : skateorbike
+image : images/favicons/android-chrome-512x512.png
 
 # Build settings
-excerpt_separator : <!--more-->
-markdown          : kramdown
-highlighter       : rouge
-kramdown          :
-  input           : GFM
-permalink         : /:title/
-exclude           : [CNAME]
+excerpt_separator   : <!--more-->
+markdown            : kramdown
+highlighter         : rouge
+kramdown            :
+  input             : GFM
+  auto_ids          : true
+  auto_id_stripping : true
+permalink           : /:title/
+exclude             : [CNAME]
 
 sass:
 style       : expanded
